tests/ui/unstable-features/trivial_bounds-bug.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
   --> tests/ui/unstable-features/trivial_bounds-bug.rs:13:43
    |
13  |     impl Unpin for A where PhantomPinned: Unpin {} //~ ERROR E0277
    |                                           ^^^^^ the trait `Unpin` is not implemented for `PhantomPinned`
    |
    = note: consider using `Box::pin`
note: required by a bound in `Unpin`
   --> $RUST/core/src/marker.rs
    |
    | pub auto trait Unpin {}
    | ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Unpin`
